--- a/Example/AMTableWithStickyView.xcodeproj/xcshareddata/xcschemes/AMTableWithStickyView-Example.xcscheme
+++ b/Example/AMTableWithStickyView.xcodeproj/xcshareddata/xcschemes/AMTableWithStickyView-Example.xcscheme
@@ -38,6 +38,16 @@
                ReferencedContainer = "container:AMTableWithStickyView.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "9F219B501D4BFE55000C47F4"
+               BuildableName = "UITests.xctest"
+               BlueprintName = "UITests"
+               ReferencedContainer = "container:AMTableWithStickyView.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
